# docs/swagger.yaml
@@ -1,9 +1,157 @@
 basePath: /
+definitions:
+  handler.Data:
+    properties:
+      sectionsAdd:
+        items:
+          type: string
+        type: array
+      sectionsDelete:
+        items:
+          type: string
+        type: array
+    type: object
+  handler.SectionRequestBody:
+    properties:
+      slug:
+        type: string
+    type: object
+  handler.UserRequestBody:
+    properties:
+      name:
+        type: string
+    type: object
 host: localhost:8000
 info:
   contact: {}
   description: API Server for AvitoProj Application
   title: Avito Proj API
   version: "1.0"
-paths: {}
+paths:
+  /api/sections:
+    delete:
+      consumes:
+      - application/json
+      description: delete section
+      operationId: delete-section
+      parameters:
+      - description: section (slug) name
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/handler.SectionRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: Section deleted'
+          schema:
+            type: integer
+        "400":
+          description: 'message: Failed'
+          schema:
+            type: integer
+      summary: Delete section
+      tags:
+      - sections
+    post:
+      consumes:
+      - application/json
+      description: create new section
+      operationId: create-section
+      parameters:
+      - description: section (slug) name
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/handler.SectionRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: Section created'
+          schema:
+            type: integer
+        "400":
+          description: 'message: Failed'
+          schema:
+            type: integer
+      summary: Create new section
+      tags:
+      - sections
+  /api/sections/users/:id:
+    get:
+      consumes:
+      - application/json
+      description: get user sections
+      operationId: get-user-sections
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
+        "400":
+          description: Bad Request
+      summary: Get user sections
+      tags:
+      - sections-users
+    put:
+      consumes:
+      - application/json
+      description: add or delete user in sections
+      operationId: add-user
+      parameters:
+      - description: list of sections to add or delete
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/handler.Data'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: Success'
+          schema:
+            type: integer
+        "400":
+          description: 'message: Failed'
+          schema:
+            type: integer
+      summary: Add user in section
+      tags:
+      - sections-users
+  /api/users:
+    post:
+      consumes:
+      - application/json
+      description: create new user
+      operationId: create-user
+      parameters:
+      - description: user's name
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/handler.UserRequestBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 'message: User created'
+          schema:
+            type: integer
+        "400":
+          description: 'message: Failed'
+          schema:
+            type: integer
+      summary: Create new user
+      tags:
+      - users
 swagger: "2.0"
